[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/ilsscrp.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://HUD.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 32
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="HUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StarMessage" type="RichTextLabel" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -138.0
focus_mode = 2
custom_fonts/normal_font = SubResource( 1 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_colors/selection_color = Color( 1, 1, 0.466667, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
selection_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="mouse_entered" from="StarMessage" to="." method="_on_StarMessage_mouse_entered"]
[connection signal="mouse_exited" from="StarMessage" to="." method="_on_StarMessage_mouse_exited"]
